# nanoGPT

./: .gitignore  .pre-commit-config.yaml  LICENSE  hello_world.py  main.py  nanogpt.py  prepare_training_data.py  pyproject.toml  train.py
nanogpt/: data_loader.py  logging.py  model.py  nanogpt.py  utils.py
src/nanogpt/: main.py
