[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "ruff>=0.11.10",
]

[tool.ruff]
target-version = "py312"
line-length = 96

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "COM", "T20"]
ignore = ["ANN204", "COM812"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["nanogpt"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "basic"
